
<resources>
    <string name="app_name">GROW.</string>
    <string name="skyscraper">Wolkenkrabber</string>
    <string name="cinema">Cinema</string>
    <string name="treasure_chest">Schatkist</string>
    <string name="musicRoom">Muziek</string>
    <string name="backpack">Rugzak</string>
    <string name="billboard">Billboard</string>
    <string name="bulletinboard">Prikbord</string>
    <string name="winkelCentrum">Winkelcentrum</string>
    <string name="wolkenkrabber">Wolkenkrabber</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="button_open">Open</string>
    <string name="button_unpin">unpin</string>
    <string name="request_consultation">Gesprek aanvragen</string>
    <string name="audio">Audio</string>
    <string name="Image">Foto</string>
    <string name="video">Video</string>
    <string name="text">Tekst</string>
    <string name="annuleren">Annuleren</string>
    <string name="aanvraag_gesprek">Gesprek</string>
    <string name="instellingen">Instellingen</string>
    <string name="profiel">Profiel</string>
    <string name="uitloggen">Uitloggen</string>
    <string name="meest_bezocht">Meest Bezocht</string>
    <string name="welkom">Goed je terug te zien!</string>
    <string name="naam">Jane Doe</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="login">Log in</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label">button</string>
    <string name="forgot_password">wachtwoord vergeten</string>
    <string name="password">Wachtwoord</string>
    <string name="OK">OK</string>

    <string name="grow.">GROW.</string>
    <string name="titel">Titel</string>
    <string name="tekst">Tekst</string>
    <string name="under_construction">Aan dit deel wordt nog gewerkt</string>

    <string name="welcome">"Welkom "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Inloggen is niet gelukt!"</string>
    <string name="email">Vul hier je e-mail in</string>
    <string name="tryAgain">probeer opnieuw</string>
    <string name="aanvraag_gesprek_dialogbox">Gesprek met je begeleider</string>
    <string name="aanvraag_gesprek_dialogbox_message">Wil je graag een gesprek aanvragen met je begeleider?</string>
    <string name="no_connection">Er kon geen verbinding gemaakt worden met de server</string>
    <string name="nieuwe_tekst_post_toevoegen">Nieuwe tekst post toevoegen</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="behaald">Behaald</string>
    <string name="delen">Delen</string>
    <string name="verwijder">Verwijder</string>
    <string name="doel_gedeeld">Doel Gedeeld</string>
    <string name="doel_verwijderd">Doel Verwijderd</string>
    <string name="wachtwoord_wijzigen">Wachtwoord wijzigen</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="jane_doe_gmail_com">jane.doe@gmail.com</string>
    <string name="donkere_modus">Donkere modus</string>
    <string name="nieuw_wachtwoord_confirmeren">Nieuw wachtwoord confirmeren</string>
    <string name="nieuw_wachtwoord">Nieuw wachtwoord</string>
    <string name="oud_wachtwoord">Oud wachtwoord</string>
    <string name="hint_text">Opgeslagen plaatsen</string>
    <string name="camera">Camera</string>
    <string name="camerafolder">Camerafolder</string>
    <string name="plaatsen">Plaatsen</string>
    <string name="vul_hier_je_titel_in">vul hier je titel in:</string>
    <string name="nieuwe_video_post_toevoegen">nieuwe video post toevoegen</string>
    <string name="nieuwe_post_toevoegen">nieuwe post toevoegen</string>

    <string name="start">Start</string>
    <string name="pauze">Pauze</string>
    <string name="stop">Stop</string>
    <string name="Beluister">Beluister</string>
    <string name="Pauze">Pauze</string>

    <string name="title_goal">Titel van het doel</string>
    <string name="add_a_step">Voeg een stap toe:</string>
    <string name="add_new_goal">Voeg toe</string>
    <string name="lbl_list_goalsteps">De stappen:</string>
    <string name="lbl_description_goal">Beschrijving</string>
    <string name="soort_post_filter">Soort post filter</string>
    <string name="city">Stad</string>
    <string name="albumcover">album hoes</string>
</resources>