<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/includeProfiel"
            layout="@layout/app_bar_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardprofiel"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="75dp"
                android:outlineAmbientShadowColor="#FFFFFF"
                app:cardCornerRadius="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profielImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/profiel"
                    android:src="@drawable/profielfoto" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/profielNaam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/jane_doe"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profielEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/jane_doe_gmail_com"
                android:textAlignment="center"
                android:textSize="18sp" />
            
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/donkereModus"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="175dp"
                android:gravity="center"
                android:text="@string/donkere_modus" />

            <Button
                android:id="@+id/wachtwoordWIjzigen"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:enabled="true"
                android:layout_marginTop="200dp"
                android:focusable="true"
                android:gravity="center"
                android:onClick="@string/wachtwoord_wijzigen"
                android:text="@string/wachtwoord_wijzigen"
                app:icon="@drawable/ic_person" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
