<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/app_bar_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FFFFFF"
                android:elevation="10dp"   >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wat wil je toevoegen?"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Nieuw:"
                        android:textSize="16sp"

                        />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="2">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <Button
                                android:id="@+id/button2"
                                style="@style/buttonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/audio" />

                            <Button
                                android:id="@+id/button3"
                                style="@style/buttonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Image" />


                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <Button
                                android:id="@+id/button4"
                                style="@style/buttonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/video" />

                            <Button
                                android:id="@+id/button5"
                                style="@style/buttonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text" />


                        </TableRow>


                    </TableLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Van opgeslagen plaatsen:"
                        android:textSize="16sp"

                        />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="2">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <Button
                                android:id="@+id/button7"
                                style="@style/buttonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/skyscraper" />

                            <Button
                                android:id="@+id/button6"
                                style="@style/buttonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cinema" />


                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <Button
                                android:id="@+id/button8"
                                style="@style/buttonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/treasure_chest" />

                            <Button
                                android:id="@+id/button9"
                                style="@style/buttonStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/backpack" />


                        </TableRow>


                    </TableLayout>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/annuleren"
                        android:id="@+id/annuleren_post"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>



