<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TextPostToevoegenFragment">

        <include
            layout="@layout/app_bar_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize" >


            <TextView
                android:layout_width="388dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/nieuwe_tekst_post_toevoegen"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textposttitel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titel"
                    android:singleLine="true"
                    android:maxLength="40"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textposttext"
                    android:layout_width="match_parent"
                    android:layout_height="221dp"
                    android:layout_margin="10dp"
                    android:gravity="top|left"
                    android:hint="@string/tekst"
                    android:maxLines="8"
                    android:maxLength="350"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/text_post_toevoegen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/toevoegen" />
        </LinearLayout>
    </FrameLayout>

</layout>
