<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/request_consultation"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <EditText
            android:id="@+id/tekstGesprekBegeleider"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:gravity="left|top"
            android:hint="Type hir extra info voor gesprek met je begeleider"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/aavraag_gesprek"
                style="@style/pinkButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="20dp"
                android:text="@string/aanvraag_gesprek" />

            <Button
                android:id="@+id/annuleren"
                style="@style/pinkButtonStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/annuleren" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>