<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardprofielww"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:outlineAmbientShadowColor="#FFFFFF"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

            <TextView
                android:id="@+id/oudwwtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oud_wachtwoord" />

            <EditText
                android:id="@+id/oudwwfld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/nieuwwwtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nieuw_wachtwoord" />

            <EditText
                android:id="@+id/nieuwwwfld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/nieuwwwtxtconfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nieuw_wachtwoord_confirmeren" />

            <EditText
                android:id="@+id/nieuwwwfldconfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</layout>