<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/app_bar_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="#FFFFFF"
                android:elevation="10dp"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wat wil je toevoegen?"
                    android:layout_marginTop="100dp"
                    android:textAlignment="center"
                    android:textSize="27sp"
                    android:textStyle="bold"/>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="40dp"
                        android:stretchColumns="2">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="7dp"
                            android:gravity="center">

                            <Button
                                android:id="@+id/AudioButton"
                                style="@style/buttonStyle"
                                android:layout_width="137dp"
                                android:layout_height="72dp"
                                android:clickable="false"
                                android:text="@string/audio" />

                            <Button
                                android:id="@+id/FotoButton"
                                style="@style/buttonStyle"
                                android:layout_width="137dp"
                                android:layout_height="72dp"

                                android:clickable="false"
                                android:text="@string/Image" />


                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="7dp"
                            android:gravity="center">

                            <Button
                                android:id="@+id/VideoButton"
                                style="@style/buttonStyle"
                                android:layout_width="137dp"
                                android:layout_height="72dp"

                                android:clickable="true"
                                android:text="@string/video"
                                android:textColor="#9E9797" />


                            <Button
                                android:id="@+id/TekstButton"
                                style="@style/buttonStyle"
                                android:layout_width="137dp"
                                android:layout_height="72dp"
                                android:clickable="true"
                                android:text="@string/text" />
                        </TableRow>
                    </TableLayout>

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>



